[package]
name = "flake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.21.3"
miniquad = "0.3.11"
rand = "0.8.5"
image = "0.24.3"
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0.83"
